--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.3.10",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -36,10 +36,8 @@
     "@ngrx/store-devtools": "^15.4.0",
     "chart.js": "^3.9.1",
     "country-calling-code": "^0.0.3",
-    "express": "^4.18.2",
     "google-libphonenumber": "^3.2.32",
     "ngx-perfect-scrollbar": "^10.1.1",
-    "path": "^0.12.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
