--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.3.10",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
