--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "heroku-postbuild": "ng build --configuration production"
-
   },
   "private": true,
   "dependencies": {
@@ -36,11 +35,13 @@
     "@ngrx/store-devtools": "^15.4.0",
     "chart.js": "^3.9.1",
     "country-calling-code": "^0.0.3",
+    "express": "^4.18.2",
     "google-libphonenumber": "^3.2.32",
     "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.4",
