--- a/package.json
+++ b/package.json
@@ -33,21 +33,23 @@
     "@ngrx/entity": "^15.4.0",
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
+    "bootstrap": "^5.2.3",
     "chart.js": "^3.9.1",
     "country-calling-code": "^0.0.3",
     "express": "^4.18.2",
     "google-libphonenumber": "^3.2.32",
     "ngx-perfect-scrollbar": "^10.1.1",
+    "path": "^0.12.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0",
-    "path": "^0.12.7"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.4",
     "@angular/cli": "^15.2.4",
     "@angular/compiler-cli": "^15.2.4",
     "@angular/localize": "^15.2.4",
+    "@types/bootstrap": "^5.2.6",
     "@types/google-libphonenumber": "^7.4.23",
     "@types/jasmine": "^4.3.1",
     "@types/node": "^18.15.7",
