--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "country-calling-code": "^0.0.3",
     "express": "^4.18.2",
     "google-libphonenumber": "^3.2.32",
+    "moment": "^2.29.4",
     "ngrx-store-localstorage": "^15.0.0",
     "ngx-perfect-scrollbar": "^10.1.1",
     "path": "^0.12.7",
